--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bookstoreservice?useUnicode=tr
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=2716Mint
+server.port=9080
