--- a/book-api/pom.xml
+++ b/book-api/pom.xml
@@ -31,5 +31,10 @@
   		<artifactId>springfox-swagger-ui</artifactId>
   		<version>2.7.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.alibaba</groupId>
+  		<artifactId>fastjson</artifactId>
+  		<version>1.2.45</version>
+  	</dependency>
   </dependencies>
 </project>
